fix sponsor page on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -218,4 +218,5 @@ section.alert.alert-danger a{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
